@@ -703,6 +703,10 @@ class SamplingLattice(AbstractLattice):
         if state["data_version"] == 4:
             self._v4_to_v5_virtual_bond(state)
             state["data_version"] = 5
+        # version 5 to version 6
+        if state["data_version"] == 5:
+            self._v5_to_v6_attribute(state)
+            state["data_version"] = 6
         # setstate
         for key, value in state.items():
             setattr(self, key, value)
