@@ -6,6 +6,7 @@
 + *tetragono*: Add support to calculate deviation of the observer set as a whole, which is useful since many observables
   are the summation of several local observables.
 + *tetragono*: Add arguments support for =gm_conf_create= and =ap_conf_create= in tetragono shell.
++ *tetragono*: Add a member dict called =attribute= to =AbstractState=, which may contain customed data used by user.
 *** Changed
 + *tetragono*: =save_result= accept another parameter, which is the total result of the whole observers set. Its
   signature is =state=, =result=, =whole_result= and =step= now.
